# xauusd-reverse-engineering

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  setup.ps1
ea/: INSTALL.md  XAUUSD_AsianMomentum_v3.mq5
notebooks/: 01_extract_data.ipynb
scripts/: analyze_duplicates.py
src/: __init__.py
src/backtest/: __init__.py  engine.py  matcher.py  metrics.py
src/ea_generator/: __init__.py
src/extraction/: __init__.py  market_data.py  mt5_client.py  trade_history.py
src/features/: microstructure.py  smc.py  snapshot.py  technical.py
src/strategies/: __init__.py
tests/: test_metrics.py
v2/: README.md
v2/config/: settings.py
v2/notebooks/: 00_ground_truth_extraction.ipynb  01_features_part1.ipynb  02_test_strategy_v1.ipynb
v2/scripts/: README_backtest_twelvedata.md  ablation_study.py  analyze_daily_pnl.py  analyze_sl_tp_distances.py  backtest_2years_anteriores_twelvedata.py  backtest_3years.py  backtest_3years_twelvedata.py  backtest_5years.py  backtest_dukascopy.py  backtest_twelvedata.py  backtest_v3_insample.py  build_trades_from_pdf.py  check_data_coverage.py  evaluate_v3.py  extend_ohlc_to_oos.py  find_quality_filter.py  refetch_trades.py  regenerate_features_and_test_v2.py  split_matched_vs_extra_insample.py  validate_oos.py
v2/src/backtest/: engine.py  metrics.py  monthly_report.py  visualization.py
v2/src/data/: data_validator.py  dukascopy_extractor.py  dukascopy_to_features.py  mt5_extractor.py  trades_pdf_source.py  twelve_data_extractor.py  (+1 more)
v2/tests/: test_features.py  test_strategy_v3.py
(+9 files in other folders)
